--- a/application/views/Teacher_setQuestions.html
+++ b/application/views/Teacher_setQuestions.html
@@ -67,7 +67,7 @@
             </div>
           </div>
           <div class='row'>
-            <button class="btn btn-block waves-effect waves-light" type="submit" name="action">Send Message
+            <button class="btn btn-block waves-effect waves-light" type="submit" name="action">Send Questions
               <i class="material-icons right">send</i>
             </button>         
           </div>
