--- a/application/views/index.html
+++ b/application/views/index.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>403 Forbidden</title>
+    <title>Login Form</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
+
 </head>
-<body>
+<body class="img">
+    <div class="section"></div>
+    <main>
+        <center>
+            <h3 style="color: #0097a7">Welcome to EduApp</h3>
+            <form action="" method="POST">
+                <div  class="z-depth-3 y-depth-3 x-depth-3 grey green-text lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px; margin-top: 50px; solid #EEE;">
+                    <div class="section"></div>
 
-<p>Directory access is forbidden.</p>
+                    <div class='row'>
+                        <div class='input-field col s12'>
+                            <input class='validate' type="text" name='username' required />
+                            <label for='username'>Username</label>
+                        </div>
+                    </div>
+                    <div class='row'>
+                        <div class='input-field col m12'>
+                            <input class='validate' type='password' name='password' id='password' required />
+                            <label for='password'>Password</label>
+                        </div>
+                    </div>
+                    
+                    <div class='row'>
+                        <a href="Teacher_addStudent.html"><button class="btn waves-effect waves-light" type="submit" name="action">Login
+                            <i class="material-icons right">send</i>
+                        </button> </a>
+                        <br>  
+                        <label>
+                            <b style="color: #0097a7;">Don't have an Acount? <a href="signUp.html">Sign Up</a></b>
+                        </label>        
+                    </div>
+                </div>
+            </form>
 
+        </center>
+    </main>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 </body>
 </html>
