changed the name of the controller and added added a route in the route file

--- a/application/views/index.html
+++ b/application/views/index.html
@@ -12,17 +12,24 @@
     <div class="section"></div>
     <main>
         <center>
+
+            <!-- Header -->
             <h3 style="color: #0097a7">Welcome to EduApp</h3>
+
+            <!-- Form -->
             <form action="" method="POST">
                 <div  class="z-depth-3 y-depth-3 x-depth-3 grey green-text lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px; margin-top: 50px; solid #EEE;">
                     <div class="section"></div>
-
+                    
+                    <!-- Username -->
                     <div class='row'>
                         <div class='input-field col s12'>
                             <input class='validate' type="text" name='username' required />
                             <label for='username'>Username</label>
                         </div>
                     </div>
+
+                    <!-- Password -->
                     <div class='row'>
                         <div class='input-field col m12'>
                             <input class='validate' type='password' name='password' id='password' required />
@@ -30,20 +37,24 @@
                         </div>
                     </div>
                     
+                    <!-- Login button -->
                     <div class='row'>
                         <a href="Teacher_addStudent.html"><button class="btn waves-effect waves-light" type="submit" name="action">Login
                             <i class="material-icons right">send</i>
                         </button> </a>
-                        <br>  
+                        <br> 
+
+                        <!-- create an account -->
                         <label>
                             <b style="color: #0097a7;">Don't have an Acount? <a href="signUp.html">Sign Up</a></b>
                         </label>        
-                    </div>
-                </div>
+                    </div><!-- end of login div -->
+                </div><!-- end of the entire div -->
             </form>
-
         </center>
     </main>
+
+    <!-- Javascript -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 </body>
