--- a/application/views/signUp.html
+++ b/application/views/signUp.html
@@ -12,11 +12,16 @@
     <div class="section"></div>
     <main>
         <center>
+
+            <!-- Header -->
             <h3 style="color: #0097a7">Welcome to EduApp</h3>
+
+            <!-- Form -->
             <form action="" method="POST">
                 <div  class="z-depth-3 y-depth-3 x-depth-3 grey green-text lighten-4 row" style="display: inline-block; padding: 32px 48px 0px 48px; border: 1px; margin-top: 50px; solid #EEE;">
                     <div class="section"></div>
-
+                    
+                    <!-- first name and last name -->
                     <div class='row'>
                         <div class='input-field col s6'>
                             <input class='validate' type="text" name='firstname' required />
@@ -27,6 +32,8 @@
                             <label for='lastname'>Last Name</label>
                         </div>
                     </div>
+
+                    <!-- phone number and password -->
                     <div class='row'>
                         <div class='input-field col s6'>
                             <input class='validate' type="text" name='phonenumber' required />
@@ -37,6 +44,8 @@
                             <label for='password'>Password</label>
                         </div>
                     </div>
+
+                    <!-- email and type of user -->
                     <div class='row'>
                         <div class='input-field col s6'>
                             <input class='validate' type="text" name='email' required />
@@ -53,16 +62,18 @@
                         </div>
                     </div>
                     
+                    <!-- Signup button -->
                     <div class='row'>
                         <button class="btn waves-effect waves-light" type="submit" name="action">Sign Up
                             <i class="material-icons right">send</i>
                         </button>         
-                    </div>
-                </div>
+                    </div> <!-- end of signup button -->
+                </div> <!-- end of the entire div -->
             </form>
-
         </center>
     </main>
+
+    <!-- Java Script -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
 </body>
