added different files and modified the route file

--- a/application/views/setquestions_trial.html
+++ b/application/views/setquestions_trial.html
@@ -68,14 +68,7 @@
             </div>
           </div>
           <div class="row">
-            <div class='input-field col md 12'>
-              <input class='validate' type="text" name="Question" placeholder="Type your question here" required />
-              <input class='validate' type="text" name="Answer_1" placeholder="Answer 1" required />
-              <input class='validate' type="text" name="Answer_2" placeholder="Answer 2" required />
-              <input class='validate' type="text" name="Answer_3" placeholder="Answer 3" required />
-              <input class='validate' type="text" name="Correct_answer" placeholder="Correct_answer" required />
-            </div>
-          </div>
+             <a class="btn-floating btn-large waves-effect waves-light red" href="forms.html"><i class="material-icons">add</i></a>
           <div class='row'>
             <button class="btn btn-block waves-effect waves-light" type="submit" name="action">Send Questions
               <i class="material-icons right">send</i>
