--- a/application/views/Teacher_addStudent.html
+++ b/application/views/Teacher_addStudent.html
@@ -12,12 +12,12 @@
     <!-- Navigation Bar -->
   	<nav>
 	    <div class="nav-wrapper" style="background-color: #0097a7">
-	      	<a href="#" class="brand-logo center"><img src="" >Logo</a>
+	      	<a href="#" class="brand-logo center"><i class="material-icons prefix">account_circle</i></a>
 	      	<!-- <i class="material-icons">list</i> -->
 	      	<ul id = "dropdown" class = "dropdown-content">
 				<li><a href="#">Students</a></li>
-				<li><a href="#">Assignments</a></li>
-        <li><a href="Teacher_sendMessage.html">Message</a></li>
+				<li><a href="test">Assignments</a></li>
+        <li><a href="message">Message</a></li>
 				<li><a href="#">Grades</a></li>
 	      	</ul>
 	      	<a class = "btn dropdown-button" style="background-color: transparent;" href = "#" data-activates = "dropdown">
