Updated my controllers ad models and changed the directory of my assest(css, font,js,images)

--- a/application/views/Teacher_setQuestions.html
+++ b/application/views/Teacher_setQuestions.html
@@ -67,6 +67,7 @@
                 <label for='recipient'>Add Recipient</label>
             </div>
           </div>
+          <!-- Questions -->
           <div class="row">
             <div class='input-field col md 12'>
               <input class='validate' type="text" name="Question" placeholder="Type your question here" required />
